# hssmanager

./: .gitignore  Dockerfile  db.sqlite3  db_backup.sqlite3  manage.py  pyproject.toml  requirements.txt
HSSManagerWeb/: asgi.py  settings.py  urls.py  wsgi.py
academics/: admin.py  models.py  router.py
academics/migrations/: 0001_initial.py  0002_initial.py  0003_academicgroup_deleted_at_academicgroup_is_deleted_and_more.py  0004_classteacherassignment_deleted_at_and_more.py
billing/: admin.py  apps.py  models.py  signals.py
billing/migrations/: 0001_initial.py
config/: api.py  asgi.py  auth_router.py  settings.py  urls.py  wsgi.py
config/routers/: __init__.py  auth.py  students.py
core/: admin.py  middleware.py  models.py  router.py  security.py  views.py
core/migrations/: 0001_initial.py  0002_busroute_district_studytype_bank_legacy_code_and_more.py  0003_school.py  (+1 more)
data.json/: bank.csv  caste.csv  community.csv  diocese.csv  districts.csv  districts.json  idukki.csv  koth.csv  occupation.csv  parish.csv  religion.csv  route.csv  school.csv  schools.csv  status.csv  studentinputformdata.py
hsem/: admin.py  apps.py  models.py  models_backup.py  oldmodels.py  urls.py
hssm/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py
operations/: admin.py  models.py
scripts/: sanitize.py  seed_data.py  seed_students.py
staff/: admin.py  apps.py  models.py  signals.py
students/: admin.py  apps.py  models.py  router.py  schemas.py  services.py  signals.py
to sort/: backup  importer.py  settings.html  shellcode.py  students.csv
(+139 files in other folders)
