[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-jazzmin>=3.0.4",
    "django-ninja>=1.6.2",
    "django-ninja-jwt>=5.4.4",
    "faker>=40.19.1",
    "pdfplumber>=0.11.9",
    "psycopg[binary]>=3.3.4",
]
